--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h4>TOP EXPERTISE</h4>
 
             <p>
-              With One year work experience as an intern at SAP:
+              With one year work experience as an intern at SAP:
               <a target="_blank" href="YancongLiResume2020.pdf"
                 >Download Resume</a
               >
@@ -198,7 +198,7 @@
                 </p>
                 <a
                   target="_blank"
-                  href="https://github.com/YancongLi/Webmaps-built-by-Python-and-Folium"
+                  href="https://github.com/YancongLi/PersonalPortfolioWebsiteByDjango"
                   >Read More</a
                 >
               </div>
